# optimal-binary-search-tree

./: README.md
Task3/: OptimalBinarySearchTree.h  OptimalBinaryTree.h
Task3.Tests/: OptimalBinaryTree.tests.cpp
Task3/impl/: OptimalBinarySearchTree.h  OptimalBinaryTree.h
googletest/: CMakeLists.txt
